Fix bug where yomichan wouldn't work on input box
Yomichan would only work on the input box if the auto-pasted text had
reached the text box. This was apparently happening because yomichan can
only process text that's within the <body>, and the body would only
extend to the text box when enough <p> elements containing auto-pasted
text had been inserted to overlap the body with the input box. Once this
occurred, yomichan would function as expected.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-
+html {
+	margin: 0;
+	height: 100%;
+ }
 
 body {
+	margin: 0;
+	min-height: 100%;
 	background-color: #202020;
 	color: #BCBCBC;
 	font-size: 50px;
@@ -22,4 +27,3 @@ main {
 	bottom: 10px;
 	left: 10px;
 }
-
